--- a/{{cookiecutter.repo_name}}/.gitignore
+++ b/{{cookiecutter.repo_name}}/.gitignore
@@ -8,3 +8,4 @@ provisioning/ansible_remote_variables
 provisioning/ansible_remote_inventory
 provisioning/playbooks/roles/webapp/templates/env
 releases
+logs
