--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
@@ -18,6 +18,7 @@
         - libjpeg-dev
         - sshpass
         - python-dev
+        - libffi-dev
         - python-virtualenv
         - ruby
         - vim
