added missing dependency

--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
@@ -13,6 +13,7 @@
       sudo: true
       apt: name={{ item }} state=present update_cache=yes
       with_items:
+        - libmysqlclient-dev
         - libfreetype6-dev
         - zlib1g-dev
         - libjpeg-dev
