added nginx conf expire headers

--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webserver/templates/nginx.conf
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webserver/templates/nginx.conf
@@ -1,10 +1,22 @@
 {% raw %}
+# Expires map
+map $sent_http_content_type $expires {
+  default                    off;
+  text/html                  epoch;
+  text/css                   max;
+  application/javascript     max;
+  ~image/                    max;
+  ~video/                    max;
+}
+
 server {
   listen 80;
   client_max_body_size 5M;
   server_name {{ domain }};
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
+
+  expires $expires;
 
   if (-f {{ webapp_dir}}/releases/current/.maintenance) {
     return 503;
