updating to ansible 2.4.2

--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/local.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/local.yml
@@ -11,7 +11,8 @@
     core_name: {{ cookiecutter.core_name }}
   pre_tasks:
     - name: update apt cache
-      sudo: true
+      become: true
+      become_method: sudo
       apt: update_cache=yes
   roles:
     - common
