--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webapp/tasks/main.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webapp/tasks/main.yml
@@ -1,7 +1,7 @@
 {% raw %}
 ---
-    - include: local.yml
+    - import_tasks: local.yml
       when: provisioning == 'local'
-    - include: remote.yml
+    - import_tasks: remote.yml
       when: provisioning == 'remote'
 {% endraw %}
