--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
@@ -21,7 +21,8 @@
         - sshpass
         - python-dev
         - libffi-dev
-        - python-virtualenv
+        - python3-venv
+        - python3-dev
         - ruby
         - vim
 {% endraw %}
