--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webapp/tasks/local.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webapp/tasks/local.yml
@@ -8,7 +8,7 @@
 ##
 ---
     - name: Install requirements
-      pip: requirements={{ base_dir }}/{{ repo_name }}/requirements/{{ provisioning }}.txt virtualenv={{ base_dir }}/.virtualenv
+      pip: requirements={{ base_dir }}/{{ repo_name }}/requirements/{{ provisioning }}.txt virtualenv={{ base_dir }}/.virtualenv virtualenv_command=pyvenv
 
     # Run syncdb on the application
     - name: Sync DB
