added missing dep

--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
@@ -23,6 +23,8 @@
         - libffi-dev
         - python3-venv
         - python3-dev
+        - build-essential
         - ruby
+        - ruby-dev
         - vim
 {% endraw %}
