listen both ipv4 and ipv6

--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webserver/templates/nginx.conf
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webserver/templates/nginx.conf
@@ -11,6 +11,7 @@ map $sent_http_content_type $expires {
 
 server {
   listen [::]:80;
+  listen 80;
   client_max_body_size 5M;
   server_name {{ domain }};
   access_log /var/log/nginx/access.log;
