adds mysql-server to package to be installed

--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
@@ -14,6 +14,7 @@
       become_method: sudo
       apt: name={{ item }} state=present update_cache=yes
       with_items:
+        - mysql-server
         - libmysqlclient-dev
         - libfreetype6-dev
         - zlib1g-dev
