adds python3-pymysql installation

--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/database/tasks/local.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/database/tasks/local.yml
@@ -8,6 +8,11 @@
       become_method: sudo
       apt: name=mysql-server state=present
 
+    - name: install python3-pymysql
+      become: true
+      become_method: sudo
+      apt: name=python3-pymysql state=present
+
     - name: create database
       become: true
       become_method: sudo
