--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/database/tasks/local.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/database/tasks/local.yml
@@ -8,10 +8,10 @@
       become_method: sudo
       apt: name=mysql-server state=present
 
-    - name: install python3-pymysql
+    - name: install python3-mysqldb
       become: true
       become_method: sudo
-      apt: name=python3-pymysql state=present
+      apt: name=python3-mysqldb state=present
 
     - name: create database
       become: true
