--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/database/tasks/remote.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/database/tasks/remote.yml
@@ -12,10 +12,10 @@
       become_method: sudo
       apt: name=mysql-server state=present
 
-    - name: install python3-pymysql
+    - name: install python3-mysqldb
       become: true
       become_method: sudo
-      apt: name=python3-pymysql state=present
+      apt: name=python3-mysqldb state=present
 
     - name: copy .my.cnf file with root password credentials
       template: src=my.cnf dest=/root/.my.cnf owner=root mode=0600
