--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/common/tasks/main.yml
@@ -12,19 +12,21 @@
     - name: install necessary packages
       become: true
       become_method: sudo
-      apt: name={{ item }} state=present update_cache=yes
-      with_items:
-        - libmysqlclient-dev
-        - libfreetype6-dev
-        - zlib1g-dev
-        - libjpeg-dev
-        - sshpass
-        - python-dev
-        - libffi-dev
-        - python3-venv
-        - python3-dev
-        - build-essential
-        - ruby
-        - ruby-dev
-        - vim
+      apt:
+        state: present
+        update_cache: yes
+        name:
+          - libmysqlclient-dev
+          - libfreetype6-dev
+          - zlib1g-dev
+          - libjpeg-dev
+          - sshpass
+          - python-dev
+          - libffi-dev
+          - python3-venv
+          - python3-dev
+          - build-essential
+          - ruby
+          - ruby-dev
+          - vim
 {% endraw %}
