--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/.env
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/.env
@@ -3,3 +3,5 @@ DB_NAME="db_{{ cookiecutter.repo_name }}"
 DB_USER="root"
 DB_PASSWORD=""
 PYTHONUNBUFFERED="true"
+REMOTE_USER_PWD="{{ cookiecutter.remote_password }}"
+REMOTE_DB_PWD="{{ cookiecutter.db_user_pwd }}"
