adds expires headers for woff2

--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webserver/templates/nginx.conf
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webserver/templates/nginx.conf
@@ -4,6 +4,7 @@ map $sent_http_content_type $expires {
   default                    off;
   text/html                  epoch;
   text/css                   max;
+  font/woff2                 max;
   application/javascript     max;
   ~image/                    max;
   ~video/                    max;
