adds fonts cache headers

--- a/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webserver/templates/nginx.conf
+++ b/{{cookiecutter.repo_name}}/provisioning/playbooks/roles/webserver/templates/nginx.conf
@@ -4,7 +4,6 @@ map $sent_http_content_type $expires {
   default                    off;
   text/html                  epoch;
   text/css                   max;
-  font/woff2                 max;
   application/javascript     max;
   ~image/                    max;
   ~video/                    max;
@@ -55,8 +54,14 @@ server {
   }
 
   location /static {
-    root {{ webapp_dir }};
+    location ~* \.(?:woff|woff2|ttf)$ {
+      expires 1M;
+      access_log off;
+      add_header Cache-Control "public";
+    }
+    root /home/otto/www/folkclub;
   }
+
   location /media {
     root {{ webapp_dir }};
   }
