updates logging settings

--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/uwsgi.ini
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/uwsgi.ini
@@ -8,5 +8,6 @@ threads=10
 vacuum=True
 max-requests=5000
 harakiri=30
-daemonize={{ cookiecutter.webapp_dir }}/logs/{{ cookiecutter.repo_name }}.log
+daemonize={{ cookiecutter.webapp_dir }}/logs/uwsgi.log
+log-maxsize=10000
 stats=/tmp/stats_{{ cookiecutter.repo_name }}.sock
